--- a/src/app/components/notification/list-notification/list-notification.component.html
+++ b/src/app/components/notification/list-notification/list-notification.component.html
@@ -118,8 +118,8 @@
 <ion-footer class="back-tab">
   <mdc-tab-bar (activated)="logTab($event)" stacked>
     <mdc-tab-scroller>
-      <mdc-tab class="tabs-color" label="Todos" icon="assignment_active" (click)="section = 'all'"></mdc-tab>
-      <mdc-tab class="tabs-color" label="Clientes" icon="people" (click)="section = 'buyer'"></mdc-tab>
+      <mdc-tab class="tabs-color" label="Todos" icon="assignment_active"></mdc-tab>
+      <mdc-tab class="tabs-color" label="Clientes" icon="people"></mdc-tab>
       <mdc-tab class="tabs-color" label="Eventos" icon="calendar_today"></mdc-tab>
       <mdc-tab class="tabs-color" label="Asesores" icon="supervised_user_circle"></mdc-tab>
       <mdc-tab class="tabs-color" label="Propiedades" icon="business"></mdc-tab>
