--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -36,13 +36,14 @@
   </div>
   <div class="grandParentContaniner">
     <form #loginForm="ngForm">
-      <mdc-text-field label="Nombre" [(ngModel)]="emailInput" #email="ngModel" id="email" name="email" required
-        [outline]="true" [required]="true" [helperText]="weightHelper"></mdc-text-field>
+      <mdc-text-field class="color-text-field" label="Nombre" [(ngModel)]="emailInput" #email="ngModel" id="email" name="email"
+        required [outline]="true" [required]="true" [helperText]="weightHelper"></mdc-text-field>
       <mdc-text-field-helper-text #weightHelper="mdcHelperText" [validation]="true">
         <span *ngIf="email.dirty || email.touched">Anota nombre</span>
       </mdc-text-field-helper-text>
-      <mdc-text-field (keyup)="pressEnter($event)" label="Contraseña" type="password" [(ngModel)]="passInput" #pass="ngModel"
-        id="pass" name="pass" required [outline]="true" [required]="true" [helperText]="weightHelper"></mdc-text-field>
+      <mdc-text-field class="color-text-field" (keyup)="pressEnter($event)" label="Contraseña" type="password"
+        [(ngModel)]="passInput" #pass="ngModel" id="pass" name="pass" required [outline]="true" [required]="true"
+        [helperText]="weightHelper"></mdc-text-field>
       <mdc-text-field-helper-text #weightHelper="mdcHelperText" [validation]="true">
         <span *ngIf="pass.dirty || pass.touched">Anota Contraseña</span>
       </mdc-text-field-helper-text>
