--- a/src/app/components/notification/list-notification/list-notification.component.scss
+++ b/src/app/components/notification/list-notification/list-notification.component.scss
@@ -31,6 +31,11 @@
     margin-left: 25%;
 }
 
+.chips-detail {
+    padding: 15px;
+    font-size: 1.3em;
+}
+
 @media(max-width: 900px) {
     .user-select-contenet {
         margin: 1% 1% 1% 1%;
