--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
                 <ion-label>
                   {{p.title}}
                 </ion-label>
+                <ion-badge *ngIf=" (numOfNewNoti | async) > 0 && p.url === '/list-notification'" color="danger" slot="end">
+                  {{(numOfNewNoti | async)}}
+                </ion-badge>
               </ion-item>
             </span>
 
@@ -25,6 +28,7 @@
               <ion-label>
                 Cerrar Sesión
               </ion-label>
+
             </ion-item>
             <!-- <ion-item>
               <ion-label>
