--- a/src/global.scss
+++ b/src/global.scss
@@ -172,3 +172,20 @@ html {
   background-color: black;
   color: white;
 }
+
+.notification-button {
+  position: relative;
+  width: 42px;
+  top: 1px;
+  right: 1px;
+  overflow: visible !important;
+}
+
+
+.notifications-badge {
+  background-color: #FF1744;
+  position: absolute;
+  top: -3px;
+  right: -3px;
+  border-radius: 100%;
+}
