--- a/src/app/components/admin/list-adviser-admin/list-adviser-admin.component.html
+++ b/src/app/components/admin/list-adviser-admin/list-adviser-admin.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <!--  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button style="color: white !important"></ion-menu-button>
     </ion-buttons>
@@ -7,7 +7,12 @@
       Asesores
     </ion-title>
 
-  </ion-toolbar>
+
+  </ion-toolbar> -->
+  <ion-header>
+    <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Asesores'" [buttonNotification]="'notifications'"
+      [buttonUser]="'person'"></app-menu-general>
+  </ion-header>
 </ion-header>
 <ion-content padding>
   <ng-container *ngIf="isLoading; then Load; else noLoad"></ng-container>
