--- a/src/app/components/buyer/calendar-buyer/calendar-buyer.component.html
+++ b/src/app/components/buyer/calendar-buyer/calendar-buyer.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar translucent color="primary">
     <ion-buttons slot="start">
       <ion-menu-button style="color: white !important"></ion-menu-button>
@@ -7,6 +7,9 @@
       Calendario
     </ion-title>
   </ion-toolbar>
+</ion-header> -->
+<ion-header>
+  <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Calendario'" [buttonUser]="'person'"></app-menu-general>
 </ion-header>
 <ion-header>
   <ion-toolbar color="secondary">
