--- a/src/app/components/buyer/inter-prop-buyer/inter-prop-buyer.component.html
+++ b/src/app/components/buyer/inter-prop-buyer/inter-prop-buyer.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button style="color: white !important"></ion-menu-button>
@@ -7,6 +7,9 @@
       Lista de Deseos
     </ion-title>
   </ion-toolbar>
+</ion-header> -->
+<ion-header>
+  <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Lista de Deseos'" [buttonUser]="'person'"></app-menu-general>
 </ion-header>
 <ion-content padding>
   <ng-container *ngIf="isLoad; then thenTemplate; else elseTemplate"></ng-container>
