--- a/src/app/components/admin/detail-adviser-admin/detail-adviser-admin.component.html
+++ b/src/app/components/admin/detail-adviser-admin/detail-adviser-admin.component.html
@@ -7,7 +7,7 @@
       Detalles
     </ion-title>
   </ion-toolbar> -->
-  <app-menu-general [isMenuButton]=false [colorMenuButton]="'white'" [titleMenu]="'Detalles'" [buttonNotification]="'notifications'"
+  <app-menu-general [isMenuButton]="'back'" [colorMenuButton]="'white'" [titleMenu]="'Detalles'" [buttonNotification]="'notifications'"
     [buttonUser]="'person'"></app-menu-general>
 </ion-header>
 <ion-content padding>
