--- a/src/app/components/admin/detail-salesprop-admin/detail-salesprop-admin.component.html
+++ b/src/app/components/admin/detail-salesprop-admin/detail-salesprop-admin.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button style="color: white !important"></ion-back-button>
@@ -7,6 +7,10 @@
       Detalles de Apartado
     </ion-title>
   </ion-toolbar>
+</ion-header> -->
+<ion-header>
+  <app-menu-general [isMenuButton]="'back'" [colorMenuButton]="'white'" [titleMenu]="'Detalles de Apartado'"
+    [buttonNotification]="'notifications'" [buttonUser]="'person'"></app-menu-general>
 </ion-header>
 <ion-content>
   <ion-grid fixed>
