--- a/src/app/components/admin/list-buyer-admin/list-buyer-admin.component.html
+++ b/src/app/components/admin/list-buyer-admin/list-buyer-admin.component.html
@@ -1,5 +1,5 @@
-<!-- <ion-header>
-  <ion-toolbar color="primary">
+<ion-header>
+  <!-- <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button style="color: white !important"></ion-menu-button>
     </ion-buttons>
@@ -7,11 +7,11 @@
       Clientes
     </ion-title>
 
-  </ion-toolbar>
+  </ion-toolbar> -->
+  <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Clientes'" [buttonNotification]="'notifications'"
+    [buttonUser]="'person'"></app-menu-general>
+</ion-header>
 
-</ion-header> -->
-<app-menu-general [isMenuButton]=true [colorMenuButton]="'white'" [titleMenu]="'Clientes'" [buttonNotification]="'notifications'"
-  [buttonUser]="'person'"></app-menu-general>
 <ion-content padding>
   <ng-container *ngIf="isLoading; then Load; else noLoad"></ng-container>
   <!-- contenido -->
