--- a/src/app/components/admin/list-oferts-admin/list-oferts-admin.component.html
+++ b/src/app/components/admin/list-oferts-admin/list-oferts-admin.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button style="color: white !important"></ion-menu-button>
@@ -7,7 +7,11 @@
       Ofertas
     </ion-title>
 
-  </ion-toolbar>
+  </ion-toolbar> 
+</ion-header>-->
+<ion-header>
+  <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Ofertas'" [buttonNotification]="'notifications'"
+    [buttonUser]="'person'"></app-menu-general>
 </ion-header>
 <ion-content padding>
   <ng-container *ngIf="isLoading; then Load; else noLoad"></ng-container>
