--- a/src/app/components/adviser/new-edit-adviser/new-edit-adviser.component.html
+++ b/src/app/components/adviser/new-edit-adviser/new-edit-adviser.component.html
@@ -1,16 +1,8 @@
-<!-- <ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-menu-button style="color: white !important"></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      Asesor
-    </ion-title>
+<ion-header>
+  <app-menu-general [isMenuButton]="'back'" [colorMenuButton]="'white'" [titleMenu]="isNew ? 'Nuevo Asesor': 'Editar Asesor'"
+    [buttonNotification]="'notifications'" [buttonUser]="'person'"></app-menu-general>
+</ion-header>
 
-  </ion-toolbar>
-</ion-header> -->
-<app-menu-general [isMenuButton]=true [colorMenuButton]="'white'" [titleMenu]="isNew ? 'Nuevo Asesor': 'Editar Asesor'"
-  [buttonNotification]="'notifications'" [buttonUser]="'person'"></app-menu-general>
 <ion-content>
   <ion-grid fixed>
     <div class="container" style="margin-top: 3%">
