--- a/src/app/components/buyer/detail-prop-buyer/detail-prop-buyer.component.html
+++ b/src/app/components/buyer/detail-prop-buyer/detail-prop-buyer.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button style="color: white !important"></ion-back-button>
@@ -7,6 +7,10 @@
       Detalles
     </ion-title>
   </ion-toolbar>
+</ion-header> -->
+<ion-header>
+  <app-menu-general [isMenuButton]="'back'" [colorMenuButton]="'white'" [titleMenu]="'Detalles de Propiedad'"
+    [buttonUser]="'person'"></app-menu-general>
 </ion-header>
 <ion-content padding>
   <ng-container *ngIf="isLoad; then thenTemplate; else elseTemplate"></ng-container>
